[gd_scene load_steps=7 format=2]

[ext_resource path="res://EnemigoVolador.gd" type="Script" id=1]
[ext_resource path="res://img/enemigo_volador.png" type="Texture" id=2]
[ext_resource path="res://img/explosion.png" type="Texture" id=3]

[sub_resource type="SegmentShape2D" id=1]
a = Vector2( 85.4873, 9.06708 )
b = Vector2( 0.960144, 9.06708 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 364.139, 143.815 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 75.4824
height = 8.87476

[node name="EnemigoVolador" type="RigidBody2D"]
position = Vector2( 682.126, 89.8437 )
collision_layer = 8
collision_mask = 303
mode = 2
gravity_scale = 0.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Node2D" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Node2D"]
position = Vector2( 0.295166, 0.484863 )
scale = Vector2( 0.616749, 0.594524 )
texture = ExtResource( 2 )

[node name="SpriteExplosion" type="Sprite" parent="Node2D"]
visible = false
position = Vector2( -11.8164, -36.9897 )
scale = Vector2( 0.323842, 0.347938 )
texture = ExtResource( 3 )

[node name="AreaDeDanio" type="Area2D" parent="Node2D"]
editor/display_folded = true
collision_layer = 8
collision_mask = 2

[node name="ColisionDanio" type="CollisionShape2D" parent="Node2D/AreaDeDanio"]
position = Vector2( -47.7352, -87.8112 )
shape = SubResource( 1 )

[node name="ChequeoDePlayer" type="Area2D" parent="Node2D"]
editor/display_folded = true
collision_layer = 64

[node name="ColisionConElPlayer" type="CollisionShape2D" parent="Node2D/ChequeoDePlayer"]
position = Vector2( -251.383, 333.549 )
shape = SubResource( 2 )

[node name="ColisicionCuerpo" type="CollisionShape2D" parent="."]
position = Vector2( 2.82428, 5.22301 )
shape = SubResource( 3 )

[node name="EnemigoPrueba" type="Node2D" parent="."]
[connection signal="body_entered" from="Node2D/AreaDeDanio" to="." method="_on_Area2D_body_entered"]
